@@ -4,7 +4,6 @@ import java.awt.Color;
 import java.awt.Component;
 import java.awt.Dimension;
 import java.awt.Font;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -104,7 +103,7 @@ public class ManageGradesPage extends JPanel {
             router.showView(Pages.LOGIN, state);
         });
         return;
-    } else if (!Arrays.asList(allowedRoles).contains(state.getCurrUser().getRole().getValue())) {
+    } else if (!List.of(allowedRoles).contains(state.getCurrUser().getRole().getValue())) {
         SwingUtilities.invokeLater(() -> {
             router.showView(Pages.DASHBOARD, state);
         });
